--- a/style.scss
+++ b/style.scss
@@ -4,71 +4,18 @@ html {
   padding: 0;
 }
 
-.header {
-  background: #ea7527;
-  position: sticky;
-  top: 0;
-  z-index: 999;
+@import "scss/header";
+@import "scss/ilgstpeja";
+@import "scss/jaunumi";
+@import "scss/landingpage";
+@import "scss/parmums";
+@import "scss/produkti";
+@import "scss/uzturklase";
+@import "scss/breakpoints";
+@import "fonti/fonti";
 
-  #navigation-bar {
-    display: flex;
-    border: 1px solid red;
-    height: 140px;
-    padding-left: 200px;
-    position: relative;
-
-    #header-container {
-      display: flex;
-      border: 1px solid blue;
-      #logo-container {
-        display: flex;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        flex-direction: column;
-        .logo {
-          height: 90px;
-          width: auto;
-          display: flex;
-        }
-        #logo-teksts {
-          display: flex;
-          line-height: 36px;
-          padding: 0 20px;
-          color: #fff;
-          text-transform: uppercase;
-          font-weight: 500;
-          font-size: 15px;
-        }
-      }
-
-      #logo {
-        display: flex;
-        border: 1px solid green;
-      }
-
-      #list-container {
-        display: flex;
-        border: 1px solid white;
-
-        #list {
-          display: flex;
-          list-style: none;
-          border: 1px solid purple;
-          align-items: center;
-
-          .list-element {
-            display: block;
-            line-height: 36px;
-            padding: 0 20px;
-            color: #fff;
-            text-transform: uppercase;
-            font-weight: 500;
-            font-size: 15px;
-          }
-        }
-      }
-    }
-  }
+.wrapper {
+  max-width: 1490px + (80 * 2);
+  margin: auto;
+  box-sizing: border-box;
 }
