--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+/*
+Theme Name: cipsi
+Theme URI: #
+Description: Child theme
+Author: Elvijs Kurss
+Version: 1.0.0
+*/
+/* Add your custom styles here */
 body,
 html {
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -9,6 +18,7 @@ html {
   position: sticky;
   top: 0;
   z-index: 999;
+  border: 1px solid black;
 }
 .header #navigation-bar {
   display: flex;
@@ -69,6 +79,12 @@ html {
   text-decoration: none;
 }
 
+#jaunumi {
+  width: 100%;
+  height: 2000px;
+  background-color: black;
+}
+
 @font-face {
   font-family: PhantomItalicBlack;
   src: url(fonti/AnyConv.com__Panton-BlackitalicCaps.ttf);
@@ -85,6 +101,59 @@ html {
   font-family: PhantomItalicLight;
   src: url(fonti/AnyConv.com__Panton-LightItalicCaps.ttf);
 }
+.footer {
+  background: #ea7527;
+  position: relative;
+  min-height: 650px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.fa {
+  font-weight: 400;
+  font-size: 36px;
+  color: black;
+}
+
+#bottom-footer {
+  background: #111822;
+  color: #fff;
+  line-height: 100px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 16px;
+}
+
+#top-footer {
+  display: flex;
+  border: 1px solid red;
+  align-items: center;
+  justify-content: center;
+  padding-top: 60px;
+  flex-direction: column;
+}
+#top-footer #logo-container {
+  height: 100px;
+  display: flex;
+  border: 1px solid green;
+  width: 1080px;
+}
+#top-footer .row {
+  display: flex;
+  border: 1px solid blue;
+  align-items: center;
+}
+
+.logo {
+  background-image: url("assets/logo.svg");
+}
+
 .wrapper {
   max-width: 1650px;
   margin: auto;
